# MyPreciouses

./: .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  nexus.bbcode.txt  vcpkg.json
Skyrim/Data/Interface/: pv_fingerselect.swf
Skyrim/Data/Interface/Translations/: LeftHandRingsSKSE_ENGLISH.txt
Skyrim/Data/MCM/Config/LeftHandRingsSKSE/: settings.ini
Skyrim/Data/meshes/LeftHandRingsSKSE/Rings/: DummyRing_1.nif
Skyrim/Data/optional/: LeftHandRingsSKSE.esp
Skyrim/Data/optional/Interface/LeftHandRingsSKSE/: logo.dds
Skyrim/Data/optional/MCM/Config/LeftHandRingsSKSE/: config.json  settings.ini
Skyrim/Data/optional/Scripts/: LeftHandRingsSKSE_MCM.pex
Skyrim/Data/optional/Source/Scripts/: LeftHandRingsSKSE_MCM.psc
cmake/: copy_skyrim_assets.cmake  deploy_assets.cmake  fingerselect_assets.cmake  package_mod.cmake  package_skse_mod.cmake  run_clang_tidy.cmake  version.rc.in
interface/fingerselect/actionscript/: FingerSelectMenu.as.in
interface/fingerselect/swf/: fingerselect.xml  fingerselect_skyui.xml
src/: ArmorClones.cpp  ArmorClones.h  BondOfMatrimony.cpp  BondOfMatrimony.h  ClonedEquipment.cpp  ClonedEquipment.h  EventBindings.cpp  EventBindings.h  EventListener.cpp  EventListener.h  Events.h  FingerSelectMenu.cpp  FingerSelectMenu.h  FirstPerson.cpp  FirstPerson.h  Forms.h  HookUtil.h  Hooks.cpp  Hooks.h  Inventory.cpp  Inventory.h  Localization.cpp  Localization.h  MeshRetargeting.cpp  MeshRetargeting.h  ModelPaths.h  PCH.h  Papyrus.cpp  Papyrus.h  RingFootprints.cpp  RingFootprints.h  RingVisuals.cpp  RingVisuals.h  RuntimeClones.cpp  RuntimeClones.h  RuntimeEquipment.cpp  RuntimeEquipment.h  Selection.cpp  Selection.h  Serialization.cpp  (+16 more)
src/Audio/: EquipSounds.h
src/Compatibility/: Vanilla.cpp  Vanilla.h
src/Core/: ActorKey.h  Assignment.h  FingerMask.h  ItemSource.h  Target.h  TargetMask.h  TargetProjection.h
src/Equipment/: AssignmentActions.cpp  AssignmentActions.h  AssignmentStore.cpp  AssignmentStore.h  AutoEquip.cpp  AutoEquip.h  RaceSwitchRestore.cpp  RaceSwitchRestore.h  SpecialRingRules.cpp  SpecialRingRules.h
src/Papyrus/: FormScriptNames.cpp  FormScriptNames.h  ScriptEventMirror.cpp  ScriptEventMirror.h
src/UI/: ContainerMenu.cpp  ContainerMenu.h  FavoritesMenu.cpp  FavoritesMenu.h  FingerSelectMenu.cpp  FingerSelectMenu.h  InventoryMenu.cpp  InventoryMenu.h  ItemMenuActions.cpp  ItemMenuActions.h  RingItemRows.cpp  RingItemRows.h  Scaleform.h  VanillaItemMenuControls.cpp  VanillaItemMenuControls.h
src/VirtualSlots/: EnchantmentEffects.cpp  EnchantmentEffects.h
src/Visuals/: Attachments.cpp  Attachments.h
